kubernetes/searchXng/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    istio.io/dataplane-mode: ambient
