kubernetes/searchXng/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:latest@sha256:5d6d903ab82afa56ee32792d477f36bc63d3e5ca04fcb6947e28a5cfd987fad3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/searxng
            - name: data
              mountPath: /var/cache/searxng
      volumes:
        - name: config
          hostPath:
            path: /data/searxng
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /data/searxng-data
            type: DirectoryOrCreate
