kubernetes/searchXng/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: searxng
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - search.alexmickelson.guru
      secretName: searxng-tls-cert
  rules:
    - host: search.alexmickelson.guru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
